kan klikke tilbage til studieunivers fra biologi siden

--- a/biologi.html
+++ b/biologi.html
@@ -36,7 +36,7 @@
 
 <aside>
     <nav class="tab">
-        <button class="tablinks" onclick="openButton(event, 'Studieunivers')">Studieunivers</button>
+        <button class="tablinks" onclick="window.location.href='index.html'">Studieunivers</button>
         <button class="tablinks" onclick="openButton(event, 'Fag')" id="defaultOpen">Fag</button>
         <button class="tablinks" onclick="openButton(event, 'Hjælptilopgaver')">Hjaelp til opgaver</button>
         <button class="tablinks" onclick="openButton(event, 'Biblioteksvagten')">Biblioteksvagten</button>
